feat: Minor changes

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.10.16",
+    "@types/chroma-js": "^3.1.1",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.13.2",
     "@types/react": "^19.1.2",
@@ -72,8 +73,10 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/vite": "^4.1.5",
     "@vinejs/vine": "^3.0.0",
+    "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "colorthief": "^2.6.0",
     "edge.js": "^6.2.1",
     "lucide-react": "^0.503.0",
     "luxon": "^3.6.1",
