--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/chroma-js": "^3.1.1",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.13.2",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19.1.2",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19.1.3",
@@ -73,13 +74,16 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/vite": "^4.1.5",
     "@vinejs/vine": "^3.0.0",
+    "axios": "^1.10.0",
     "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "colorthief": "^2.6.0",
     "edge.js": "^6.2.1",
+    "form-data": "^4.0.3",
     "lucide-react": "^0.503.0",
     "luxon": "^3.6.1",
+    "node-fetch": "^2.7.0",
     "pg": "^8.15.6",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
