--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test": "node ace test",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "migrate": "node ace migration:run",
+    "migrate:rollback": "node ace migration:rollback",
+    "migrate:reset": "node ace migration:reset",
+    "migrate:status": "node ace migration:status",
+    "db:seed": "node ace db:seed"
   },
   "imports": {
     "#controllers/*": "./app/controllers/*.js",
